--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,4 @@ pip-log.txt
 # Mac crap
 .DS_Store
 /www/sites/domua.khituongthuyvan.net/settings.php
+/www/sites/domua.khituongthuyvan.net/settings.php
