--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,4 @@ pip-log.txt
 .DS_Store
 /www/sites/domua.khituongthuyvan.net/settings.php
 /www/sites/domua.khituongthuyvan.net/settings.php
+/www/sites/domua.khituongthuyvan.net/settings.php
